while is a library macro

--- a/arc++.vcxproj
+++ b/arc++.vcxproj
@@ -86,13 +86,11 @@
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="library.arc">
-      <DeploymentContent>false</DeploymentContent>
-    </None>
     <None Include="README.md" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="arc.h" />
+    <ClInclude Include="library.h" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="arc.rc" />
