added pipe-from (popen, pclose)
changed arc tutorial link
fixed (type) bug about input, output
fixed type-check in readline

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,7 +6,7 @@
 project(arc++)
 cmake_minimum_required(VERSION 2.8)
 
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=gnu++17")
 
 # Source files
 set(SOURCES main.cpp arc.cpp)
